--- a/recipes/hamburgers.html
+++ b/recipes/hamburgers.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/hamburgers.html">Hamburgers</a>
+    <h1>Hamburgers</h1>
 </body>
 </html>
