Complete Step/Iteration 3

--- a/recipes/hamburgers.html
+++ b/recipes/hamburgers.html
@@ -8,5 +8,22 @@
 </head>
 <body>
     <h1>Hamburgers</h1>
+    <img src="https://assets.epicurious.com/photos/57c5c6d9cf9e9ad43de2d96e/master/w_1000,h_684,c_limit/the-ultimate-hamburger.jpg" alt="Picture of hamburger">
+    <h2>Description</h2>
+        <p>These tasty sandwiches will make your mouth water!</p>
+    <h2>Ingredients</h2>
+        <ul>Ground beef</ul>
+        <ul>Hamburger buns</ul>
+        <ul>Cheese (optional)</ul>
+        <ul>Lettuce (optional)</ul>
+        <ul>Tomato (optional)</ul>
+        <ul>Any other ingredients (optional)</ul>
+    <h2>Steps</h2>
+        <li>Warm up grill</li>
+        <li>Make ground beef into balls and then flatten them into circular patties</li>
+        <li>When grill is hot enough, place patties over direct heat</li>
+        <li>After 2-3 min, flip the patties over</li>
+        <li>After another 2-3 min, move patties over indirect heat</li>
+        <li>Once the patties' internal temperatures reach 160 degrees Fahrenheit, remove from grill.  Let the patties rest 2-5 minutes before eating</li>
 </body>
 </html>
