Complete Pizza Recipe for Step/Iteration 4

--- a/recipes/hamburgers.html
+++ b/recipes/hamburgers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe: Hamburgers</title>
 </head>
 <body>
     <h1>Hamburgers</h1>
@@ -20,7 +20,6 @@
             <li>Tomato (optional)</li>
             <li>Any other ingredients (optional)</li>            
         </ul>
-
     <h2>Steps</h2>
         <ol>
             <li>Warm up grill</li>
@@ -29,6 +28,7 @@
             <li>After 2-3 min, flip the patties over</li>
             <li>After another 2-3 min, move patties over indirect heat</li>
             <li>Once the patties' internal temperatures reach 160 degrees Fahrenheit, remove from grill.  Let the patties rest 2-5 minutes before eating</li>
+            <li>Add any additional toppings (e.g. lettuce, tomatoes, cheese) if desired</li>
         </ol>
 </body>
 </html>
