--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/hamburgers.html">Hamburgers</a>
+    <a>Pizza</a>
+    <a>Pulled Pork</a>
 </body>
 </html>
