--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/hamburgers.html">Hamburgers</a>
-    <a href="recipes/pizza.html">Pizza</a>
-    <a href="recipes/pulled-pork.html">Pulled Pork</a>
+    <ul>
+        <li><a href="recipes/hamburgers.html">Hamburgers</a></li>
+        <li><a href="recipes/pizza.html">Pizza</a></li>
+        <li><a href="recipes/pulled-pork.html">Pulled Pork</a></li>
+    </ul>
 </body>
 </html>
